2008-06-03  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkprinteroptionset.h: remove newline at beginning of file.

2008-06-02  Matthias Clasen  <mclasen@redhat.com>
	
	Bug 536092 – GtkEntryCompletion's popup window should set type hint

	* gtk/gtkentrycompletion.c (gtk_entry_completion_init): Set
	a type hint on the popup window to help compiz.
	Patch by Vaclav Slavik.

2008-06-02  Claudio Saavedra  <csaavedra@igalia.com>

	Bug 535862 – gtk_action_create_icon can't create icons from the
	icon themes

	* gtk/gtkaction.c: (gtk_action_create_icon): Look for the icon in
	the default factories as it's supposed.

2008-06-02  Yevgen Muntyan  <muntyan@tamu.edu>

        Bug 535497 – Print preview doesn't work.

        * gtk/Makefile.am: GTK_PRINT_PREVIEW_COMMAND on quartz: use open
        instead of launching Preview.app directly.

2008-06-02  Michael Natterer  <mitch@imendio.com>

	* gtk/gtksignal.h: put back #include <gtk/gtkmarshal.h>, it's not
	in <gtk/gtk.h>. Fixes stuff that uses deprecated cruft.
	(bug #536126).

2008-05-31  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 535830 – wrong content type adding an item

	* gtk/gtkrecentmanager.c:
	(gtk_recent_manager_add_item_query_info): Use the correct API
	for retrieving the fast MIME type of a URI. (Carlos Garcia
	Campos)

2008-05-31  Kristian Rietveld  <kris@imendio.com>

	Bug 530146 - Setting non-string tooltip with
	gtk_tree_view_set_tooltip_column() segfaults

	* gtk/gtktreeview.c (gtk_tree_view_set_tooltip_query_cb): use
	gtk_tree_model_get_value() and explicitly transform the value to a
	string before setting it as tooltip.

2008-05-30  Tor Lillqvist  <tml@novell.com>

	* modules/engines/ms-windows/msw_style.h
	* modules/engines/ms-windows/msw_rc_style.h: Include gtk.h.

2008-05-30  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmenu.c (get_attach_info): cast attach_info_free() to
	GDestroyNotify when using it in g_object_set_data_full().

2008-05-30  Michael Natterer  <mitch@imendio.com>
