@@ -25,7 +25,7 @@
  * Modified by the GTK+ Team and others 1997-2000.  See the AUTHORS
  * file for a list of people on the GTK+ Team.  See the ChangeLog
  * files for a list of changes.  These files are distributed with
- * GTK+ at ftp://ftp.gtk.org/pub/gtk/. 
+ * GTK+ at ftp://ftp.gtk.org/pub/gtk/.
  */
 
 #ifndef GTK_DISABLE_DEPRECATED
@@ -33,7 +33,7 @@
 #ifndef __GTK_CTREE_H__
 #define __GTK_CTREE_H__
 
-#include <gtk/gtk.h>
+#include <gtk/gtkclist.h>
 
 G_BEGIN_DECLS
 
